<?xml version="1.0"?>
<package format="2">
    <name>comp3431_starter</name>
    <version>1.0.0</version>
    <description>The timothyw_turtlebot package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:    -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="todo@todo.todo">todo</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--     BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>


    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <!-- Optional attribute type can be: website, bugtracker, or repository -->
    <!-- Example: -->
    <!-- <url type="website">http://ros.org/wiki/victim_id</url> -->


    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <!-- Example: -->
    <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>image_transport</depend>
    <!--depend>crosbot_msgs</depend-->
    <!--depend>crosbot</depend-->
    <depend>rviz</depend>

    <!-- Add back if necessary -->
    <!--depend>crosbot_explore</depend-->
    <!--depend>cv_bridge</depend-->
    <!--depend>crosbot_graphslam</depend-->

    <!-- RViz Plugins -->
    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>